# mcbyte-wrapped

./: .gitignore  .gitmodules  INSTALLATION.md  README.md  build.sh  pyproject.toml
exps/example/mot/: yolox_l_mix_det.py  yolox_s_mix_det.py  yolox_x_ablation.py  yolox_x_ch.py
mask_propagation/Cutie/cutie/inference/: object_manager.py
package/: LICENSE  pyproject.toml  requirements.txt  setup.py
package/exps/example/mot/: yolox_m_mix_det.py  yolox_nano_mix_det.py  yolox_tiny_mix_det.py  yolox_x_mix_det.py  yolox_x_mot17_half.py
package/mask_propagation/: mask_manager.py
package/mask_propagation/Cutie/: LICENCE  pyproject.toml
package/mask_propagation/Cutie/cutie/inference/: inference_core.py
package/yolox/data/: __init__.py
package/yolox/tracker/: kalman_filter.py  matching.py  mcbyte_tracker.py
tools/: demo_track.py  optional_smoothing.py
yolox/tracker/: gmc.py  matching.py
yolox/utils/: visualize.py
