[project]
name = "mcbyte"
version = "1.0.0"
readme = "package/README.md"
requires-python = "==3.10.*"
dependencies = [
    "yolox",
    "cutie",
    "segment_anything",
    "numpy==1.23.5",
    "opencv-python>=4.13.0.92",
    "loguru>=0.7.3",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.3",
    "pillow>=12.2.0",
    "thop>=0.1.1.post2209072238",
    "tabulate>=0.10.0",
    "tensorboard>=2.20.0",
    "lap>=0.5.13",
    "motmetrics>=1.4.0",
    "filterpy>=1.4.5",
    "h5py>=3.16.0",
    "ninja>=1.13.0",
    "cython>=3.2.4",
    "cython-bbox>=0.1.5",
]

[tool.uv.sources]
yolox = { path = "./package", editable = true }
cutie = { path = "./package/mask_propagation/Cutie", editable = true }
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }

# [tool.uv]
# override-dependencies = ["numpy==1.23.5"]

# [tool.uv.extra-build-dependencies]
# yolox = ["setuptools", "ninja", "torch"]
