[project]
name = "yolox"
requires-python = "==3.10.*"
dynamic = ["version", "readme"]
authors = [ { name = "basedet team" } ]
dependencies = [
    "cutie",
    "cython-bbox>=0.1.5",
    "filterpy>=1.4.5",
    "h5py>=3.16.0",
    "lap>=0.5.13",
    "loguru>=0.7.3",
    "motmetrics>=1.4.0",
    "ninja>=1.13.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-image>=0.25.2",
    "segment-anything",
    "tabulate>=0.10.0",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "tqdm>=4.67.3",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.dynamic]
version = { attr = "yolox.__version__" }
readme = { file = ["README.md"] }

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "torch",
]
build-backend = "setuptools.build_meta"

# [tool.cibuildwheel.linux]
# before-build = "pip install torch"
# repair-wheel-command = """
# export LD_LIBRARY_PATH=$(python -c 'import os, torch; print(os.path.dirname(torch.__file__) + "/lib")'):$LD_LIBRARY_PATH && \
# auditwheel repair -w {dest_dir} {wheel}
# """

[tool.uv.sources]
cutie = { path = "./mask_propagation/cutie" }
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
